apps/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-svc
  namespace: apps
  labels:
    app: website
spec:
  selector:
    app: website
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
