apps/website/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: website-ingressroute
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`macbytes.io`) || Host(`www.macbytes.io`)
      kind: Rule
      services:
        - name: website-svc
          port: 80
  tls:
    secretName: website-tls-certificate
